--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -650,6 +650,8 @@ padding: 0;
 
 .avantages-section .cards {
 margin:20px;
+-webkit-transition: .3s ease-in-out;
+transition: .3s ease-in-out;
 }
 
 .avantages-section .cards:hover{
@@ -663,11 +665,15 @@ display: inline;
 .avantages-section .img {
 position: relative;
 padding: 0;
+-webkit-transition: .3s ease-in-out;
+transition: .3s ease-in-out;
 }
 
 .avantages-section .img-top {
 display: none;
 position: absolute;
+-webkit-transition: .3s ease-in-out;
+transition: .3s ease-in-out;
 }
 
 
@@ -680,9 +686,6 @@ padding-top: 30px;
 .avantages-section p {
 font-size: 15px;
     }
-
-
-
 
 @media (max-width: 768px) {
 
@@ -720,7 +723,6 @@ color: #444444;
 font-weight: 700;
 }
 
-
 .item{
 padding: 10px;
 }
@@ -729,19 +731,18 @@ padding: 10px;
   max-width: 100%;
   height: auto;
   display: block;
-  border: 1px solid #ddd;
   border-radius: 5px;
-  transition: transform 0.3s;
+  filter: grayscale(70%);
+  -webkit-filter: grayscale(70%);
+  -webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
 }
 
 .item img:hover {
   transform: scale(1.05);
+  filter: grayscale(0%);
+  -webkit-filter: grayscale(0%);
 }
-
-
-
-
-
 
 /*--------------------------------------------------------------
 # Clients
