--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ top: 0;
 #header .logo img {
 max-height: 60px;
 }
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -571,7 +572,6 @@ background: none;
 transition: 0.5s;
 }
 
-
 @media (min-width: 1200px) {
 .marceau {
   background-attachment: fixed;
@@ -702,7 +702,7 @@ font-size: 15px;
 # Gallery Section
 --------------------------------------------------------------*/
 .gallery-section {
-padding-bottom: 0;
+padding-bottom: 20;
 }
 
 .gallery-section .h2-title {
@@ -739,7 +739,7 @@ padding: 10px;
 }
 
 .item img:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
   filter: grayscale(0%);
   -webkit-filter: grayscale(0%);
 }
@@ -799,8 +799,8 @@ color: #f2f2f2;
 background: #212121;
 width: 30%;
 }
+
 .contact-section .btn-contact-1:hover {
-border:1px solid;
 color: #212121;
 background: #f2f2f2;
 transition: 0.5s;
@@ -828,7 +828,6 @@ width: 30%;
 }
 
 @media (max-width: 768px) {
-
 .contact-section h2 {
   font-size: 12px;
 }
@@ -840,12 +839,12 @@ width: 30%;
 .contact-section .btn-contact-1 {
   font-size: 11px;
   margin: auto;
-  padding: 0;
+  padding: 3px;
 }
 .contact-section .btn-contact-2 {
   font-size: 11px;
   margin: auto;
-  padding: 0;
+  padding: 3px;
 }
 }
 
